--- a/index.html
+++ b/index.html
@@ -7,29 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Galería de Arte</h1>
-    </header>
-    <main>
-        <section class="gallery">
-            <div class="gallery-item">
-                <img src="img1.jpg" alt="Arte 1">
-                <p>Descripción del Arte 1</p>
-            </div>
-            <div class="gallery-item">
-                <img src="img2.jpg" alt="Arte 2">
-                <p>Descripción del Arte 2</p>
-            </div>
-            <div class="gallery-item">
-                <img src="img3.jpg" alt="Arte 3">
-                <p>Descripción del Arte 3</p>
-            </div>
-            <!-- Agregar más elementos de galería según sea necesario -->
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Galería de Arte. Todos los derechos reservados.</p>
-    </footer>
+    <div class="wrapper">
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre Nosotros</a></li>
+                <li><a href="#">Información de Contacto</a></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Galería de Arte</h1>
+        </header>
+        <main>
+            <section class="gallery">
+                <div class="gallery-item">
+                    <img src="assets/imagen1.jpg" alt="Arte 1">
+                    <p>Descripción del Arte 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/8.jpg" alt="Arte 2">
+                    <p>Descripción del Arte 2</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/imagen4.jpg" alt="Arte 3">
+                    <p>Descripción del Arte 3</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/15.jpg" alt="Arte 4">
+                    <p>Descripción del Arte 3</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/imagen3.jpg" alt="Arte 4">
+                    <p>Descripción del Arte 3</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/11.jpg" alt="Arte 4">
+                    <p>Descripción del Arte 3</p>
+                </div>
+            </section>
+        </main>
+    </div>
+    
+    
     <script src="script.js"></script>
 </body>
 </html>
