--- a/index.html
+++ b/index.html
@@ -21,34 +21,40 @@
         <main>
             <section class="gallery">
                 <div class="gallery-item">
-                    <img src="assets/imagen1.jpg" alt="Arte 1">
+                    <img src="assets/imagen1.jpg" class="arte1">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 1</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/8.jpg" alt="Arte 2">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 2</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/imagen4.jpg" alt="Arte 3">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 3</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/15.jpg" alt="Arte 4">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 3</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/imagen3.jpg" alt="Arte 4">
+                    <img src="assets/imagen3.jpg" class="arte5">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 3</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/11.jpg" alt="Arte 4">
+                    <h1 class="titulo_obra">Título de la obra</h1>
                     <p>Descripción del Arte 3</p>
                 </div>
             </section>
         </main>
     </div>
     
-    
+
     <script src="script.js"></script>
 </body>
 </html>
