--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
                 <div class="gallery-item">
                     <img src="assets/imagen1.jpg" class="arte1">
                     <h1 class="titulo_obra">Título de la obra</h1>
-                    <p>Descripción del Arte 1</p>
+                    <p class="texto_parrafo">La joven doncella, con su piel de porcelana y cabello de oro,</p> 
+                    <p>se encuentra en un jardín exuberante. Sus ojos,</p>
+                    <p> grandes y expresivos, miran al espectador con una mezcla de inocencia y sabiduría.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/8.jpg" alt="Arte 2">
                     <h1 class="titulo_obra">Título de la obra</h1>
-                    <p>Descripción del Arte 2</p>
+                    <p>Sentada en un suntuoso trono, la princesa contempla el paisaje
+                        a través de una ventana. Su rostro, enmarcado por un elaborado
+                         tocado, refleja una profunda melancolía. </p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/imagen4.jpg" alt="Arte 3">
